# haraka_sv

./: .gitignore  README.md  pyproject.toml
src/cocotb/: haraka_aes_round.py  haraka_round.py
src/lib/: haraka.py
src/rtl/: aes.sv  haraka.sv  haraka_types.sv  tiny_sbox.sv
src/tests/: conftest.py  test_aes_round.py  test_haraka_round.py
